--- a/index.html
+++ b/index.html
@@ -804,7 +804,10 @@
             </div>
           </div>
           <div class="c-btn-layout c-btn-layout--center">
-            <a href="#" class="c-btn c-btn-default">получить персональное предложение</a>
+            <a href="#" class="c-btn c-btn-default">
+              <span class="c-btn-bg"></span>
+              <span class="c-btn-text">Получить персональное предложение</span>
+            </a> 
           </div>
         </div>
 
@@ -1171,7 +1174,7 @@
               <div class="service-card__body">
                 <div class="service-card__title">Создание сайтов</div>
                 <div class="service-card__text">
-                  У нас большой опыт в создании сайтов и много клиентов. Мы создавали квизы, лендинги, визитки, магазины и порталы, как с нуля, так и по шаблону, выбранным заказчиком. И мы можем доказать свою квалификацию!                </div>
+                  У нас большой опыт в создании сайтов и много клиентов. Мы создавали квизы, лендинги, визитки, магазины и порталы, как с нуля, так и по шаблону, выбранным заказчиком.И мы можем доказать свою квалификацию!                </div>
 
                 <div class="c-btn-layout c-btn-layout--left">
                   <a href="#" class="c-btn c-btn-default js-show-consultation">
@@ -1190,7 +1193,7 @@
               <div class="service-card__body">
                 <div class="service-card__title">Контекстная реклама</div>
                 <div class="service-card__text">
-                  В современном мире очень сложно переоценить рекламу. Именно тогда. когда вас видят на первых страницах в поисковых системах у вас имеется стабильный приток новых покупателейи повышение собственного дохода.                </div>
+                  В современном мире очень сложно переоценить рекламу.Именно тогда. когда вас видят на первых страницах в поисковых системах у вас имеется стабильный приток новых покупателейи повышение собственного дохода.                </div>
 
                 <div class="c-btn-layout c-btn-layout--left">
                   <a href="#" class="c-btn c-btn-default js-show-consultation">
@@ -1703,7 +1706,10 @@
   </div>
   <div class="menu-mobile__footer">
     <div class="c-btn-layout c-btn-layout--center">
-      <div class="c-btn c-btn-default js-show-consultation">Получить консультацию</div>
+      <a href="#" class="c-btn c-btn-default js-show-consultation">
+        <span class="c-btn-bg"></span>
+        <span class="c-btn-text">Получить консультацию</span>
+      </a>      
     </div>
     <div class="menu-mobile__phone">
       <a href="tel:+74951112233">+7 495 111 22 33</a>
@@ -1732,7 +1738,10 @@
               </div>
               <div class="c-form__footer">
                 <div class="c-btn-layout c-btn-layout--center">
-                  <button class="c-btn c-btn-big">Получить консультацию</button>
+                  <button class="c-btn c-btn-big">
+                    <span class="c-btn-bg"></span>
+                    <span class="c-btn-text">Получить консультацию</span>
+                  </button>
                 </div>
                 <div class="c-form__text">
                   Нажимая кнопку вы даете согласие на обработку и
@@ -1770,7 +1779,11 @@
               </div>
               <div class="c-form__footer">
                 <div class="c-btn-layout c-btn-layout--center">
-                  <button class="c-btn c-btn-big">Получить пример аудита</button>
+                  
+                  <button class="c-btn c-btn-big c-btn--blue">
+                    <span class="c-btn-bg"></span>
+                    <span class="c-btn-text">Получить пример аудита</span>
+                  </button>
                 </div>
                 <div class="c-form__text">
                   Нажимая кнопку вы даете согласие на обработку и
